fix: remove default-rules api
